@@ -90,5 +90,6 @@
 @custom-media --view-sd (min-width: 32rem);
 @custom-media --view-md (min-width: 48rem);
 @custom-media --view-ld (min-width: 64rem);
+@custom-media --view-xl (min-width: 80rem);
 
 @custom-media --ie screen and (-ms-high-contrast: active), (-ms-high-contrast: none);
